carousel spacing mobile fix

--- a/Style-Sheets/carousel.css
+++ b/Style-Sheets/carousel.css
@@ -35,7 +35,7 @@
 
 .swiper-slide {
     height: 300px;
-    min-width: 200px;
+    width: 200px;
     text-align: center;
     font-size: 18px;
     /* background: rgb(255, 251, 251); */
